--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,111 +1,113 @@
-body, h1, h2, h3, p, ul, li {
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
 	margin: 0;
 	padding: 0;
-  }
-  
-  p {
+}
+
+p {
 	max-width: 450px;
 	text-align: justify;
-  }
- 
-  body {
-  
-	display: flex;  
+}
+
+body {
+	display: flex;
 	align-items: center;
 	flex-direction: column;
 	text-align: center;
 	align-items: center;
-	justify-content: flex-start; 
-  
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-	sans-serif;
+	justify-content: flex-start;
+
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	font-variant: small-caps;
-  
-  
+
 	line-height: 1.6;
 	background-color: #182036;
-	color: #F0D9F9;
+	color: #f0d9f9;
 	background-repeat: no-repeat;
-	background-size: 1900px 950px; 
+	background-size: 1900px 950px;
 	background-position: center top;
-	background-image: url("./../lib/images/background1.png");
-	
-  }
-  
-  header {
+	background-image: url('./../lib/images/background1.png');
+}
+
+header {
 	color: #182036;
 	background-color: rgba(240, 217, 249, 0.4);
 	padding: 10px;
 	border-radius: 20px;
 	position: fixed;
-	top: 0; 
+	top: 0;
 	z-index: 999;
-  }
-  
-  nav ul {
+}
+
+nav ul {
 	list-style-type: none;
-  }
-  
-  nav ul li {
+}
+
+nav ul li {
 	display: inline-block;
 	margin-right: 10px;
-  }
-  
-  nav ul li a {
+}
+
+nav ul li a {
 	color: #182036;
 	text-decoration: none;
-  }
-  
-  main {
+}
+
+main {
 	padding: 20px;
 	/*background-color: rgba(255, 255, 255, 0.9); /* Set a semi-transparent background color for the main content area */
-  }
-  
-  h1, h2, h3 {
+}
+
+h1,
+h2,
+h3 {
 	margin-bottom: 10px;
-  }
-  
-  .project {
+}
+
+.project {
 	margin-bottom: 20px;
-  }
-  
-  .contact-icons {
+}
+
+.contact-icons {
 	list-style-type: none;
 	display: flex;
 	gap: 10px;
 	justify-content: center;
 	align-items: center;
-  }
-  
-  .contact-icons li a {
+}
+
+.contact-icons li a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 40px;
 	height: 40px;
 	color: #182036;
-	background-color: #F0D9F9;
+	background-color: #f0d9f9;
 	border-radius: 50%;
 	text-decoration: none;
 	transition: background-color 0.3s ease;
-  }
-  
-  .contact-icons li a:hover {
-	background-color: #9663EC;
-  }
-  
- 
-  #quote {
+}
+
+.contact-icons li a:hover {
+	background-color: #9663ec;
+}
+
+#quote {
 	display: inline-block;
 	flex-direction: column;
 	align-items: center;
-	justify-content: flex-start; 
+	justify-content: flex-start;
 	margin-bottom: 20px;
-  }
-  .quote h3 {
+}
+.quote h3 {
 	margin: 10px 0 0;
 	font-size: 20px;
 	font-weight: bold;
-  }
-  
+}
